--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<meta charset="UTF-8">
-<title>ШОЛОХОВСКИЙ КРАЙ</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-<link rel="stylesheet" href="style.css">
-
 <head>
     <meta charset="UTF-8">
     <title>ШОЛОХОВСКИЙ КРАЙ</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>ШОЛОХОВСКИЙ КРАЙ</h1>
-    <div id="map"></div>
-    <div id="info"></div>
+    <div id="container">
+        <div id="map"></div>
+        <div id="info"></div>
+        <div id="map-overlay"></div> <!-- оверлей должен быть тут -->
+</div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
